--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,16 @@ hs_err_pid*
 **/.classpath
 **/.project
 **/.settings
+
+.DS_Store
+node_modules/
+/dist
+/public
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor settings
+.vscode
