--- a/vue3-app-master/package.json
+++ b/vue3-app-master/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.3.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "leaflet": "^1.7.1",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.5"
   },
