--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.5"
+    "vue-router": "^4.0.0-rc.5",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
