--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "numeral": "^2.0.6",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.5"
   },
