--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vue-leaflet/vue-leaflet": "^0.3.0",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "numeral": "^2.0.6",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.5",
     "vuex": "^3.6.0"
