--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,7 @@
     "numeral": "^2.0.6",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.5",
-    "vuex": "^3.6.0"
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
