--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ hs_err_pid*
 .DS_Store
 node_modules/
 !node_modules/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+!/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+\!node_modules/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+\!/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
 /dist
 /public
 
