--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 node_modules
 !node_modules/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+!/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+\!node_modules/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
+\!/@vue-leaflet/vue-leaflet/dist/vue-leaflet.esm.js
 /dist
 
 
