--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "test:coverage": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
     "axios": "^0.21.0",
