--- a/.github/workflows/vue_testing.yml
+++ b/.github/workflows/vue_testing.yml
@@ -31,6 +31,5 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install Dependencies and Run VueJS Tests
-        run: |
-          npm install
-          npm run test:unit
+      - run: npm install
+      - run : npm run test:unit
