--- a/.github/workflows/vue_testing.yml
+++ b/.github/workflows/vue_testing.yml
@@ -30,6 +30,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Install Dependencies and Run VueJS Tests
-      - run: npm install
-      - run : npm run test:unit
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name:  Install Dependencies and Run VueJS Tests
+        run: npm install
+             npm run test:unit
+
+      
