--- a/.github/workflows/vue_testing.yml
+++ b/.github/workflows/vue_testing.yml
@@ -22,7 +22,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      working-directory: ./web 
+      working-directory: web 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -35,6 +35,7 @@ jobs:
         with:
           node-version: '12.x'
       - name:  Install Dependencies
+        working-directory: web
         run: npm install
       - name: Run VueJS Tests
         run: npm run test:unit
