--- a/.github/workflows/vue_testing.yml
+++ b/.github/workflows/vue_testing.yml
@@ -22,7 +22,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      working-directory: ./web 
+      working-directory: web 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,6 +30,13 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Install Dependencies and Run VueJS Tests
-      - run: npm install
-      - run : npm run test:unit
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name:  Install Dependencies
+        working-directory: web
+        run: npm install
+      - name: Run VueJS Tests
+        working-directory: web
+        run: npm run test:unit
