Code CleanUp & Correcting Sonar Issue #40

--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -10,6 +10,11 @@ sonar.projectKey=alihm2-VueJs
  
 # Path is relative to the sonar-project.properties file. Defaults to .
 #sonar.sources=.
+sonar.sources=./src
+sonar.test=./tests
+
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.exclusions=node_modules_intern
