--- a/.github/workflows/vue_testing.yml
+++ b/.github/workflows/vue_testing.yml
@@ -6,9 +6,7 @@ name: CI VueJs
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches:
-      - master
-      - dev
+    branches: [master, dev]
   pull_request:
     branches: [ master ]
 
